Date	Added
2006/08/10
	* Removed setting mob_ghostring_fix [Skotlex]
	* Changed setting attack_attr_none to affect all neutral-element attacks.
	  Basicly, this setting is now used to determine who can hit for full damage
	  always when using neutral-attacks (defaults to non-players) [Skotlex]
2006/08/09
	* Change the default of attack_attr_none to all classes except players.
	  This means that pet/mobs/homun will always do normal attacks with
	  no-element modifiers (but elemental reduction cards still apply) [Skotlex]
2006/08/08
	* Removed config settings display_delay_skill_fail and
	  display_snatcher_skill_fail, replaced them with display_skill_fail, which
	  can be used to determine whether you hide ALL skill-failed messages, those
	  from delay, those from Snatcher or those from Envenom (battle/skill.conf)
	  [Skotlex]
2006/08/07
	* Added config force_random_spawn which overrides the spawn-files defined
	  coordinates to make all mobs always spawn randomly on the map. [Skotlex]
	* SC_SPEEDUP0 is no longer dispellable by SA_DISPEL [Skotlex]
2006/08/04
	* Removed settings enemy_critical_rate, homun_critical_rate. Added settings
	  enable_critical (defaults to specify only players), mob_critical_rate and
	  critical_rate. The last applies to all non-mobs and non-players
	  (battle/battle.conf) [Skotlex]
	* Removed settings mob_npc_warp, mob_warpportal. Replaced with setting
	  mob_warp which specifies which types of warp can a mob step into
	  (battle/monster.conf) [Skotlex]
	* Changed name of the setting log_pick to log_filter since that's what it
	  does now. [Skotlex]
	* Modified enable_logs so that instead of a 0/1 setting, you can specify
	  which kind of events to log (so you can use a combination), see log_athena
	  for the bitmask configuration. [Skotlex]
	* Cleaned a bit the contents of log_athena.conf
2006/08/02
	* Updated status_cast_cancel to also include silence (so the cast bar is
	  cancelled if you are silenced during it) [Skotlex]
2006/08/01